Completion of first 4 user stories

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FCC Responsive Web Design Project</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <!-- freecodecamp test suite   -->
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <h1 id="title">freeCodeCamp Survey Form</h1>
+    <p id="description">
+      Thank you for taking the time to help us improve the platform
+    </p>
+    <form action="" id="survey-form">
+      <input type="text" name="" id="name" required />
+    </form>
   </body>
 </html>
