--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     </p>
     <form action="" id="survey-form">
       <input type="text" name="" id="name" required />
+      <input type="email" name="" id="email" required />
+      <input type="number" name="" id="number" />
     </form>
   </body>
 </html>
