--- a/index.html
+++ b/index.html
@@ -14,9 +14,20 @@
       Thank you for taking the time to help us improve the platform
     </p>
     <form action="" id="survey-form">
-      <input type="text" name="" id="name" required />
-      <input type="email" name="" id="email" required />
-      <input type="number" name="" id="number" />
+      <label for="name" id="name-label">Name</label>
+      <input type="text" id="name" placeholder="Enter your name" required />
+      <label for="email" id="email-label">Email</label>
+      <input type="email" id="email" placeholder="Enter your Email" required />
+      <label for="number" id="number-label">Age (optional)</label>
+      <input type="number" id="number" min="1" max="115" placeholder="age" />
+      <select id="dropdown">
+        <option value="" disabled selected>Select an option</option>
+        <option value="student">Student</option>
+        <option value="fullTimeLearner">Full Time Learner</option>
+        <option value="fullTimeJob">Full Time Job</option>
+        <option value="noDisclose">Prefer Not To Say</option>
+        <option value="other">Other</option>
+      </select>
     </form>
   </body>
 </html>
