Text area added for story #15

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
       <label for="">Maybe</label>
       <input type="radio" name="recommendation" id="notSure" value="notSure" />
       <label for="notSure">Not Sure</label>
+
+      <textarea name="" id="" cols="30" rows="10"></textarea>
     </form>
   </body>
 </html>
