--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       <label for="notSure">Not Sure</label>
 
       <textarea name="" id="" cols="30" rows="10"></textarea>
+      <input type="submit" value="Submit" id="submit" />
     </form>
   </body>
 </html>
