All initial tests passed

--- a/index.html
+++ b/index.html
@@ -47,6 +47,53 @@
       <input type="radio" name="recommendation" id="notSure" value="notSure" />
       <label for="notSure">Not Sure</label>
 
+      <input
+        type="checkbox"
+        name="Front-end Projects"
+        value="Front-end Projects"
+      />
+      <label for="Front-end Projects">Front-end Projects</label>
+      <input
+        type="checkbox"
+        name="Back-end Projects"
+        value="Back-end Projects"
+      />
+      <label for="Back-end Projects">Back-end Projects</label>
+      <input
+        type="checkbox"
+        name="Data Visualization"
+        value="Data Visualization"
+      />
+      <label for="Data Visualization">Data Visualization</label>
+      <input type="checkbox" name="Challenges" value="Challenges" />
+      <label for="Challenges">Challenges</label>
+      <input
+        type="checkbox"
+        name="Open Source Community"
+        value="Open Source Community"
+      />
+      <label for="Open Source Community">Open Source Community</label>
+      <input
+        type="checkbox"
+        name="Gitter help rooms"
+        value="Gitter help rooms"
+      />
+      <label for="Gitter help rooms">Gitter help rooms</label>
+      <input type="checkbox" name="Videos" value="Videos" />
+      <label for="Videos">Videos</label>
+      <input type="checkbox" name="City Meetups" value="City Meetups" />
+      <label for="City Meetups">City Meetups</label>
+      <input type="checkbox" name="Wiki" value="Wiki" />
+      <label for="Wiki">Wiki</label>
+      <input type="checkbox" name="Forum" value="Forum" />
+      <label for="Forum">Forum</label>
+      <input
+        type="checkbox"
+        name="Additional Courses"
+        value="Additional Courses"
+      />
+      <label for="Additional Courses">Additional Courses</label>
+
       <textarea name="" id="" cols="30" rows="10"></textarea>
       <input type="submit" value="Submit" id="submit" />
     </form>
