--- a/index.html
+++ b/index.html
@@ -4,98 +4,140 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FCC Responsive Web Design Project</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <!-- freecodecamp test suite   -->
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <h1 id="title">freeCodeCamp Survey Form</h1>
-    <p id="description">
-      Thank you for taking the time to help us improve the platform
-    </p>
-    <form action="" id="survey-form">
-      <label for="name" id="name-label">Name</label>
-      <input type="text" id="name" placeholder="Enter your name" required />
 
-      <label for="email" id="email-label">Email</label>
-      <input type="email" id="email" placeholder="Enter your Email" required />
+    <div class="form-title">
+      <h1 id="title">freeCodeCamp Survey Form</h1>
+      <p id="description">
+        Thank you for taking the time to help us improve the platform
+      </p>
+    </div>
+    <div class="form-body">
+      <form action="" id="survey-form">
+        <div class="form-group">
+          <label for="name" id="name-label">Name</label>
+          <input
+            type="text"
+            id="name"
+            placeholder="Enter your name"
+            class="form-control"
+            required
+          />
+        </div>
 
-      <label for="number" id="number-label">Age (optional)</label>
-      <input type="number" id="number" min="1" max="115" placeholder="age" />
+        <div class="form-group">
+          <label for="email" id="email-label">Email</label>
+          <input
+            type="email"
+            id="email"
+            placeholder="Enter your Email"
+            class="form-control"
+            required
+          />
+        </div>
 
-      <label for="dropdown"
-        >What option best describes your current role?</label
-      >
-      <select id="dropdown">
-        <option value="" disabled selected>Select an option</option>
-        <option value="student">Student</option>
-        <option value="fullTimeLearner">Full Time Learner</option>
-        <option value="fullTimeJob">Full Time Job</option>
-        <option value="noDisclose">Prefer Not To Say</option>
-        <option value="other">Other</option>
-      </select>
+        <div class="form-group">
+          <label for="number" id="number-label">Age (optional)</label>
+          <input
+            type="number"
+            id="number"
+            min="1"
+            max="115"
+            placeholder="age"
+            class="form-control"
+          />
+        </div>
 
-      <input
-        type="radio"
-        name="recommendation"
-        id="definitely"
-        value="definitely"
-      />
-      <label for="definitely">Definitely</label>
-      <input type="radio" name="recommendation" id="maybe" value="maybe" />
-      <label for="">Maybe</label>
-      <input type="radio" name="recommendation" id="notSure" value="notSure" />
-      <label for="notSure">Not Sure</label>
+        <label for="dropdown"
+          >What option best describes your current role?</label
+        >
+        <select id="dropdown">
+          <option value="" disabled selected>Select an option</option>
+          <option value="student">Student</option>
+          <option value="fullTimeLearner">Full Time Learner</option>
+          <option value="fullTimeJob">Full Time Job</option>
+          <option value="noDisclose">Prefer Not To Say</option>
+          <option value="other">Other</option>
+        </select>
 
-      <input
-        type="checkbox"
-        name="Front-end Projects"
-        value="Front-end Projects"
-      />
-      <label for="Front-end Projects">Front-end Projects</label>
-      <input
-        type="checkbox"
-        name="Back-end Projects"
-        value="Back-end Projects"
-      />
-      <label for="Back-end Projects">Back-end Projects</label>
-      <input
-        type="checkbox"
-        name="Data Visualization"
-        value="Data Visualization"
-      />
-      <label for="Data Visualization">Data Visualization</label>
-      <input type="checkbox" name="Challenges" value="Challenges" />
-      <label for="Challenges">Challenges</label>
-      <input
-        type="checkbox"
-        name="Open Source Community"
-        value="Open Source Community"
-      />
-      <label for="Open Source Community">Open Source Community</label>
-      <input
-        type="checkbox"
-        name="Gitter help rooms"
-        value="Gitter help rooms"
-      />
-      <label for="Gitter help rooms">Gitter help rooms</label>
-      <input type="checkbox" name="Videos" value="Videos" />
-      <label for="Videos">Videos</label>
-      <input type="checkbox" name="City Meetups" value="City Meetups" />
-      <label for="City Meetups">City Meetups</label>
-      <input type="checkbox" name="Wiki" value="Wiki" />
-      <label for="Wiki">Wiki</label>
-      <input type="checkbox" name="Forum" value="Forum" />
-      <label for="Forum">Forum</label>
-      <input
-        type="checkbox"
-        name="Additional Courses"
-        value="Additional Courses"
-      />
-      <label for="Additional Courses">Additional Courses</label>
+        <input
+          type="radio"
+          name="recommendation"
+          id="definitely"
+          value="definitely"
+        />
+        <label for="definitely">Definitely</label>
+        <input type="radio" name="recommendation" id="maybe" value="maybe" />
+        <label for="">Maybe</label>
+        <input
+          type="radio"
+          name="recommendation"
+          id="notSure"
+          value="notSure"
+        />
+        <label for="notSure">Not Sure</label>
 
-      <textarea name="" id="" cols="30" rows="10"></textarea>
-      <input type="submit" value="Submit" id="submit" />
-    </form>
+        <input
+          type="checkbox"
+          name="Front-end Projects"
+          value="Front-end Projects"
+        />
+        <label for="Front-end Projects">Front-end Projects</label>
+        <input
+          type="checkbox"
+          name="Back-end Projects"
+          value="Back-end Projects"
+        />
+        <label for="Back-end Projects">Back-end Projects</label>
+        <input
+          type="checkbox"
+          name="Data Visualization"
+          value="Data Visualization"
+        />
+        <label for="Data Visualization">Data Visualization</label>
+        <input type="checkbox" name="Challenges" value="Challenges" />
+        <label for="Challenges">Challenges</label>
+        <input
+          type="checkbox"
+          name="Open Source Community"
+          value="Open Source Community"
+        />
+        <label for="Open Source Community">Open Source Community</label>
+        <input
+          type="checkbox"
+          name="Gitter help rooms"
+          value="Gitter help rooms"
+        />
+        <label for="Gitter help rooms">Gitter help rooms</label>
+        <input type="checkbox" name="Videos" value="Videos" />
+        <label for="Videos">Videos</label>
+        <input type="checkbox" name="City Meetups" value="City Meetups" />
+        <label for="City Meetups">City Meetups</label>
+        <input type="checkbox" name="Wiki" value="Wiki" />
+        <label for="Wiki">Wiki</label>
+        <input type="checkbox" name="Forum" value="Forum" />
+        <label for="Forum">Forum</label>
+        <input
+          type="checkbox"
+          name="Additional Courses"
+          value="Additional Courses"
+        />
+        <label for="Additional Courses">Additional Courses</label>
+
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <input type="submit" value="Submit" id="submit" class="btn-primary" />
+      </form>
+    </div>
   </body>
 </html>
