--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="form-body">
       <form action="" id="survey-form">
         <div class="form-group">
-          <label for="name" id="name-label">Name</label>
+          <label for="name" id="name-label">Name:</label>
           <input
             type="text"
             id="name"
@@ -37,7 +37,7 @@
         </div>
 
         <div class="form-group">
-          <label for="email" id="email-label">Email</label>
+          <label for="email" id="email-label">Email:</label>
           <input
             type="email"
             id="email"
@@ -48,28 +48,30 @@
         </div>
 
         <div class="form-group">
-          <label for="number" id="number-label">Age (optional)</label>
+          <label for="number" id="number-label">Age (optional):</label>
           <input
             type="number"
             id="number"
             min="1"
             max="115"
-            placeholder="age"
+            placeholder="Age"
             class="form-control"
           />
         </div>
 
-        <label for="dropdown"
-          >What option best describes your current role?</label
-        >
-        <select id="dropdown">
-          <option value="" disabled selected>Select an option</option>
-          <option value="student">Student</option>
-          <option value="fullTimeLearner">Full Time Learner</option>
-          <option value="fullTimeJob">Full Time Job</option>
-          <option value="noDisclose">Prefer Not To Say</option>
-          <option value="other">Other</option>
-        </select>
+        <div class="form-group">
+          <label for="dropdown"
+            >What option best describes your current role?</label
+          >
+          <select id="dropdown">
+            <option value="" disabled selected>Select an option</option>
+            <option value="student">Student</option>
+            <option value="fullTimeLearner">Full Time Learner</option>
+            <option value="fullTimeJob">Full Time Job</option>
+            <option value="noDisclose">Prefer Not To Say</option>
+            <option value="other">Other</option>
+          </select>
+        </div>
 
         <input
           type="radio"
