Basic formatting complete

--- a/index.html
+++ b/index.html
@@ -98,61 +98,76 @@
         </label>
 
         <label
-          >What would you like to see improved? (Check all that apply)</label
+          >What would you like to see improved? (Check all that apply)
+        </label>
+        <label>
+          <input
+            type="checkbox"
+            name="Front-end Projects"
+            value="Front-end Projects"
+          />
+          Front-end Projects
+        </label>
+
+        <label for="Back-end Projects">
+          <input
+            type="checkbox"
+            name="Back-end Projects"
+            value="Back-end Projects"
+          />
+          Back-end Projects
+        </label>
+        <label for="Data Visualization">
+          <input
+            type="checkbox"
+            name="Data Visualization"
+            value="Data Visualization"
+          />
+          Data Visualization</label
+        ><label for="Challenges">
+          <input type="checkbox" name="Challenges" value="Challenges" />
+          Challenges</label
+        ><label for="Open Source Community">
+          <input
+            type="checkbox"
+            name="Open Source Community"
+            value="Open Source Community"
+          />
+          Open Source Community</label
+        ><label for="Gitter help rooms">
+          <input
+            type="checkbox"
+            name="Gitter help rooms"
+            value="Gitter help rooms"
+          />
+          Gitter help rooms</label
+        ><label for="Videos">
+          <input type="checkbox" name="Videos" value="Videos" />
+          Videos</label
+        ><label for="City Meetups">
+          <input type="checkbox" name="City Meetups" value="City Meetups" />
+          City Meetups</label
+        ><label for="Wiki">
+          <input type="checkbox" name="Wiki" value="Wiki" />
+          Wiki</label
+        ><label for="Forum">
+          <input type="checkbox" name="Forum" value="Forum" />
+          Forum</label
         >
-        <input
-          type="checkbox"
-          name="Front-end Projects"
-          value="Front-end Projects"
-        />
-        <label for="Front-end Projects">Front-end Projects</label>
-        <input
-          type="checkbox"
-          name="Back-end Projects"
-          value="Back-end Projects"
-        />
-        <label for="Back-end Projects">Back-end Projects</label>
-        <input
-          type="checkbox"
-          name="Data Visualization"
-          value="Data Visualization"
-        />
-        <label for="Data Visualization">Data Visualization</label>
-        <input type="checkbox" name="Challenges" value="Challenges" />
-        <label for="Challenges">Challenges</label>
-        <input
-          type="checkbox"
-          name="Open Source Community"
-          value="Open Source Community"
-        />
-        <label for="Open Source Community">Open Source Community</label>
-        <input
-          type="checkbox"
-          name="Gitter help rooms"
-          value="Gitter help rooms"
-        />
-        <label for="Gitter help rooms">Gitter help rooms</label>
-        <input type="checkbox" name="Videos" value="Videos" />
-        <label for="Videos">Videos</label>
-        <input type="checkbox" name="City Meetups" value="City Meetups" />
-        <label for="City Meetups">City Meetups</label>
-        <input type="checkbox" name="Wiki" value="Wiki" />
-        <label for="Wiki">Wiki</label>
-        <input type="checkbox" name="Forum" value="Forum" />
-        <label for="Forum">Forum</label>
-        <input
-          type="checkbox"
-          name="Additional Courses"
-          value="Additional Courses"
-        />
-        <label for="Additional Courses">Additional Courses</label>
+        <label for="Additional Courses">
+          <input
+            type="checkbox"
+            name="Additional Courses"
+            value="Additional Courses"
+          />
+          Additional Courses</label
+        >
 
         <label>Any comments or suggestions?</label>
-
         <textarea
           name=""
           id=""
-          rows="5"
+          rows="3"
           placeholder="Enter your comment here..."
         ></textarea>
         <input type="submit" value="Submit" id="submit" class="btn-primary" />
